Bug 100870 - Crash in: SfxWorkWindow::UpdateChildWindows_Impl()
Summary: Crash in: SfxWorkWindow::UpdateChildWindows_Impl()
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
5.2.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Markus Mohrhard
URL:
Whiteboard: target:5.3.0 target:5.2.1
Keywords:
: 101320 101375 101389 101451 101655 101656 101657 101994 (view as bug list)
Depends on:
Blocks:
 
Reported: 2016-07-12 14:07 UTC by Wilfried Koch
Modified: 2016-09-24 09:44 UTC (History)
9 users (show)

See Also:
Crash report or crash signature: ["SfxWorkWindow::UpdateChildWindows_Impl()"]


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Wilfried Koch 2016-07-12 14:07:52 UTC
This bug was filed from the crash reporting server and is br-3f6f6a67-7972-430b-82f7-2b9616c08e2c.
=========================================

I didn't have the impression there was a crash. Last action was storing, then shutdown.
Error message appeared on restart.
Comment 1 water.qian 2016-07-23 08:49:14 UTC
This bug was also filed from the crash reporting server and is
http://crashreport.libreoffice.org/stats/crash_details/83181251-2980-4655-8637-c528cb1b7220

Libreoffice Writer 5.2.0.3, is crashed each time when I open a new file in Writer when the Navigator is docked to the left side of the Window.

Undock the Navigator from left side, it will become normal.
Comment 2 Wilfried Koch 2016-07-23 10:22:25 UTC
Navigator never was docked to the left side of the window.
Comment 3 Daveo 2016-07-29 15:28:29 UTC
See my crash report:
http://crashreport.libreoffice.org/stats/crash_details/003acceb-1902-4b6a-a624-10fd813cd282

I reopened Bug 91546 which demonstrates that (at least for 5.2.0 RC3 under Win 7 x64) the issue is definitely caused by the docked Navigator panel.
Comment 4 Wilfried Koch 2016-07-29 18:29:21 UTC
The navigator probably was docked, but never on the left side.
Comment 5 Daveo 2016-07-29 20:26:54 UTC
(In reply to Wilfried Koch from comment #4)
> The navigator probably was docked, but never on the left side.

In all my (numerous) tests where LO crashed the Navigator panel was ALWAYS docked to the left hand side of the LO window.
Comment 6 Markus Mohrhard 2016-08-08 03:22:49 UTC
I can reproduce it on windows.
Comment 7 Commit Notification 2016-08-08 04:17:26 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=b0f4291e5c0fe6d61d621e692cbc8bea4cb4c401

no range based for loop when container is modified, tdf#100870, tdf#101320

It will be available in 5.3.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Caolán McNamara 2016-08-08 15:00:14 UTC
*** Bug 101320 has been marked as a duplicate of this bug. ***
Comment 9 Aron Budea 2016-08-08 15:03:04 UTC
*** Bug 101375 has been marked as a duplicate of this bug. ***
Comment 10 Aron Budea 2016-08-08 15:10:28 UTC
*** Bug 101389 has been marked as a duplicate of this bug. ***
Comment 11 Commit Notification 2016-08-09 10:50:52 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "libreoffice-5-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=152de33c612f219471c96975f4ab6fd24d95dc1b&h=libreoffice-5-2

no range based for loop when container is modified, tdf#100870, tdf#101320

It will be available in 5.2.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 12 Aron Budea 2016-08-12 21:45:37 UTC
*** Bug 101451 has been marked as a duplicate of this bug. ***
Comment 13 Aiyub Khan 2016-08-12 22:18:23 UTC
Have tested the fix in Version: 5.2.1.0.0+ over two days. No crash reports.
Comment 14 Markus Mohrhard 2016-08-22 11:07:47 UTC
*** Bug 101655 has been marked as a duplicate of this bug. ***
Comment 15 Markus Mohrhard 2016-08-22 11:08:19 UTC
*** Bug 101656 has been marked as a duplicate of this bug. ***
Comment 16 Markus Mohrhard 2016-08-22 11:08:40 UTC
*** Bug 101657 has been marked as a duplicate of this bug. ***
Comment 17 Maxim Monastirsky 2016-09-08 16:52:14 UTC
*** Bug 101994 has been marked as a duplicate of this bug. ***
Comment 18 Timur 2016-09-19 15:29:33 UTC
This bug was reported also for 5.1, can it be backported to 5.1.6?
Comment 19 Markus Mohrhard 2016-09-19 15:35:20 UTC
(In reply to Timur from comment #18)
> This bug was reported also for 5.1, can it be backported to 5.1.6?

This bug can not happen in 5-1 as the code there is still in the correct form. This is purely a 5-2 and master bug. I also doubt that any user is able to differentiate between different random crashes.