sfx2/source/appl/workwin.cxx
@@ -1291,8 +1291,9 @@ void SfxWorkWindow::UpdateObjectBars_Impl()
 void SfxWorkWindow::UpdateChildWindows_Impl()
 {
     // any current or in the context available Childwindows
-    for (SfxChildWin_Impl* pCW : aChildWins)
+    for ( size_t n=0; n<aChildWins.size(); n++ )
     {
+        SfxChildWin_Impl *pCW = aChildWins[n];
         SfxChildWindow *pChildWin = pCW->pWin;
         bool bCreate = false;
         if ( pCW->nId && (pCW->aInfo.nFlags & SfxChildWindowFlags::ALWAYSAVAILABLE || IsVisible_Impl( pCW->nVisibility ) ) )
